Opened 17 years ago

Closed 17 years ago

#2097 closed bug (fixed)

BTextControl doesn't archive/unarchive its label

Reported by: shinta Owned by: axeld
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description (last modified by korli)

BTextControl doesn't archive/unarchive its label. I archived/flattend a BTextControl whose text view has some text, and unarchived it, BTextControl lost label.

Notice: This bug isn't checkable before fixing bug #2086.

Change History (5)

comment:1 by shinta, 17 years ago

Sorry, correction: not text, but label.


BTextControl doesn't archive/unarchive its label. I archived/flattend a BTextControl, and unarchived it, BTextControl lost label.

Notice: This bug isn't checkable before fixing bug #2086.


Please modify this entry's title to: BTextControl doesn't archive/unarchive its label

comment:2 by korli, 17 years ago

Description: modified (diff)
Summary: BTextControl doesn't archive/unarchive its textBTextControl doesn't archive/unarchive its label

by shinta, 17 years ago

Attachment: Control.diff added

comment:3 by shinta, 17 years ago

I modified Control.cpp. This change fixes unarchiving of BControl's some properties. This also fixes #2097.

comment:4 by korli, 17 years ago

Resolution: fixed
Status: newclosed

Applied in hrev25172 . Thanks.

Note: See TracTickets for help on using tickets.