Patch from Shinta, this fixes bug #2097. Thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25172 a95241bf-73f2-0310-859d-f6bbb57e9c96